--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -45,8 +45,9 @@
   "autoDocstring.docstringFormat": "numpy",
   "black-formatter.args": ["--line-length", "80"],
   "pylint.args": ["--max-line-length=80", "--disable=E1120,C0116,C0114,C0115"],
-  // "isort.args": ["--profile", "black", "--filter-files", "--force-grid-wrap=3"],
+  "isort.args": ["--profile", "black", "--filter-files", "--force-grid-wrap=3"],
   "gitlens.graph.layout": "editor",
+  "ruff.organizeImports": false,
 
   // Better comments
   "better-comments.tags": [
